--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2024"
 clap = { version = "4.0", features = ["derive"] }
 photon-rs = "0.3.2"
 image = "0.24"
+
+[profile.release]
+lto = true
+strip = true
+opt-level = 3
